--- a/src/css/base.css
+++ b/src/css/base.css
@@ -30,3 +30,10 @@ main {
 main:has(.back-link) {
   text-align: center;
 }
+
+.g-f {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
